--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Banniere",
         "Bannierea",
         "banniereap",
+        "equipements",
         "logements",
         "Routerglobal"
     ]
