--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Bannierea",
         "banniereap",
         "equipements",
+        "filtre",
         "logements",
         "Routerglobal"
     ]
